--- a/index.html
+++ b/index.html
@@ -16,68 +16,12 @@
 <div class="container-fluid">
 
     <h1>
-        SuperBootcamp Gallery!!
+        SuperBootcamp Small Gallery!!
     </h1>
 
-    <div class="row">
-
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
-                <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
-                          class="btn btn-primary"
-                          role="button">Wikipedia</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
-                <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
-                          class="btn btn-primary"
-                          role="button">Wikipedia</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
-                <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
-                          class="btn btn-primary"
-                          role="button">Wikipedia</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
-                <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
-                          class="btn btn-primary"
-                          role="button">Wikipedia</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-    </div>
+    <hr/>
+    <hr/>
+    <hr/>
 
     <div class="row">
 
@@ -139,245 +83,6 @@
 
     </div>
 
-    <div class="row">
-
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
-                <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
-                          class="btn btn-primary"
-                          role="button">Wikipedia</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
-                <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
-                          class="btn btn-primary"
-                          role="button">Wikipedia</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
-                <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
-                          class="btn btn-primary"
-                          role="button">Wikipedia</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
-                <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
-                          class="btn btn-primary"
-                          role="button">Wikipedia</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-    <div class="row">
-
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
-                <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
-                          class="btn btn-primary"
-                          role="button">Wikipedia</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
-                <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
-                          class="btn btn-primary"
-                          role="button">Wikipedia</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
-                <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
-                          class="btn btn-primary"
-                          role="button">Wikipedia</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
-                <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
-                          class="btn btn-primary"
-                          role="button">Wikipedia</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-    <div class="row">
-
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
-                <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
-                          class="btn btn-primary"
-                          role="button">Wikipedia</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
-                <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
-                          class="btn btn-primary"
-                          role="button">Wikipedia</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
-                <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
-                          class="btn btn-primary"
-                          role="button">Wikipedia</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
-                <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
-                          class="btn btn-primary"
-                          role="button">Wikipedia</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-    <div class="row">
-
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
-                <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
-                          class="btn btn-primary"
-                          role="button">Wikipedia</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
-                <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
-                          class="btn btn-primary"
-                          role="button">Wikipedia</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
-                <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
-                          class="btn btn-primary"
-                          role="button">Wikipedia</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
-                <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
-                          class="btn btn-primary"
-                          role="button">Wikipedia</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-    </div>
 
 </body>
 </html>
