--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <div class="thumbnail">
                 <img src="images/snoopy.jpg" alt="Snoopy">
                 <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
+                    <h3>Pooh!</h3>
+                    <p>The best teddy bear ever.</p>
+                    <p><a href="https://en.wikipedia.org/wiki/Winnie The Pooh"
                           class="btn btn-primary"
                           role="button">Wikipedia</a>
                     </p>
