--- a/index.html
+++ b/index.html
@@ -258,6 +258,67 @@
         </div>
 
     </div>
+
+    <div class="row">
+
+        <div class="col-sm-6 col-md-3">
+            <div class="thumbnail">
+                <img src="images/snoopy.jpg" alt="Snoopy">
+                <div class="caption">
+                    <h3>Snoopy!</h3>
+                    <p>The best character ever.</p>
+                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
+                          class="btn btn-primary"
+                          role="button">Wikipedia</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-6 col-md-3">
+            <div class="thumbnail">
+                <img src="images/snoopy.jpg" alt="Snoopy">
+                <div class="caption">
+                    <h3>Snoopy!</h3>
+                    <p>The best character ever.</p>
+                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
+                          class="btn btn-primary"
+                          role="button">Wikipedia</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-6 col-md-3">
+            <div class="thumbnail">
+                <img src="images/snoopy.jpg" alt="Snoopy">
+                <div class="caption">
+                    <h3>Snoopy!</h3>
+                    <p>The best character ever.</p>
+                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
+                          class="btn btn-primary"
+                          role="button">Wikipedia</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-6 col-md-3">
+            <div class="thumbnail">
+                <img src="images/snoopy.jpg" alt="Snoopy">
+                <div class="caption">
+                    <h3>Snoopy!</h3>
+                    <p>The best character ever.</p>
+                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
+                          class="btn btn-primary"
+                          role="button">Wikipedia</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 </div>
 
 
