--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <div class="col-sm-6 col-md-3">
             <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
+                <img src="images/a.jpg" alt="Snoopy">
                 <div class="caption">
                     <h3>Snoopy!</h3>
                     <p>The best character ever.</p>
