--- a/index.html
+++ b/index.html
@@ -143,13 +143,14 @@
 
         <div class="col-sm-6 col-md-3">
             <div class="thumbnail">
-                <img src="images/snoopy.jpg" alt="Snoopy">
+                <img src="images/marina.jpg" alt="Marina">
                 <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
-                    <p><a href="https://en.wikipedia.org/wiki/Snoopy"
+                    <h3>Marina</h3>
+                    <p>Russian girl in SuperBootcamp :)</p>
+                    <p><a href="https://www.facebook.com/marina.sheenkova"
+                          target="_blank"
                           class="btn btn-primary"
-                          role="button">Wikipedia</a>
+                          role="button">Facebook</a>
                     </p>
                 </div>
             </div>
