--- a/index.html
+++ b/index.html
@@ -264,10 +264,10 @@
 
         <div class="col-sm-6 col-md-3">
             <div class="thumbnail">
-                <img src="images/photo.jpg" alt="Snoopy">
+                <img src="images/photo.jpg" alt="Yuval_Tina">
                 <div class="caption">
-                    <h3>Snoopy!</h3>
-                    <p>The best character ever.</p>
+                    <h3>Yuval & Tina!</h3>
+                    <p>International Dog Show - Israel.</p>
                     <p><a href="https://en.wikipedia.org/wiki/Snoopy"
                           class="btn btn-primary"
                           role="button">Wikipedia</a>
